Created javascript for the menu options. Displaying only those menu items which are selected. For instance, All pizzas will be displayed if pizza option is clicked

--- a/Kanish/style.css
+++ b/Kanish/style.css
@@ -38,6 +38,7 @@ nav.order_item{
     margin: 1%;
     padding: 1.5%;
     margin-bottom: 2.5%;
+    display: none;
 }
 .order_container{
     background-color: #FFF1D0;
