--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,8 @@
 body{
     background-color: #BF0603;
 }
-h1,h2,h3{
+h1,h2,h3,
+.foodprice{
     font-family: Impact, Charcoal, sans-serif;
     color: #BF0603;
     font-weight: lighter;
@@ -102,16 +103,17 @@ article.confirmation{
     height: 100%;
 
 }
+/*
 .menu{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
     margin: 1%;
-}
-.menu_item{
+}*/
+/*.menu_item{
     background-color: #FFF1D0;
     margin: 1%;
     padding: 2%;
-}
+}*/
 .menu_nav button{
     margin: 0;
     cursor: pointer;
@@ -121,3 +123,170 @@ article.confirmation{
     Please be sure read through all the classes, ids, and other attributes of the existing code so that there is no duplication of names and there no redundent code.
     Thanks
 */
+/*styles for the all the cards starts here*/
+div.cardItems{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+div.card{
+    margin: 30px;
+    width: 350px;
+    display: grid;
+    border: black solid;
+    background-color: #FFF1D0;
+}
+div.cardItem{
+    padding: 2.5%;
+}
+
+.foodtitle {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-size: 1.3em;
+  margin-top: 2px;
+  margin-bottom: 9px;
+  color: black;
+}
+
+img.cardImage{
+    width: 100%;
+    height: 200px;
+}
+
+div p.food-details{
+  display: flex;
+  align-content: center;
+  margin: 0px;
+  padding: 3px;
+}
+
+div.cardBar{
+    display: flex;
+}
+
+.button1,
+.remove-button,
+.addtocart-btn {
+    border: none;
+    background-color: #bf0603;
+    padding: 2.5%;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: bold;
+    color: #FFF1D0;
+    margin: 2.0%;
+    cursor: pointer;
+    transition: 0.4ms;
+    border-radius: 10px;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-size: 1.1em;
+}
+
+.button1:hover{
+    background-color: brown;
+    color: #FFF1D0;
+}
+
+@media screen and (max-width: 300px) {
+    div.card{
+        width: 100%;
+    }
+}
+
+/*styles for the cart starts here*/
+h2.cart-main-heading{
+  display: flex;
+  justify-content: space-around;
+  font-weight: bold;
+  font-size: 2em;
+  color: #bf0603;
+}
+
+.cart-heading{
+  font-weight: bold;
+  font-size: 1.25em;
+}
+
+.addtocart-row{
+  display: flex;
+}
+
+.addtocart-row:last-child .addtocart-column{
+    border: none;
+}
+
+.addtocart-row:last-child{
+    border-bottom: 1px solid black;
+}
+
+.item-addtocart{
+  width: 45%;
+  align: left;
+}
+
+.addtocart-column{
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid black;
+  margin-right: 1.5em;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.price-addtocart{
+  width: 20%;
+  font-size: 1.2em;
+}
+
+.quantity-addtocart{
+  width: 35%;
+}
+
+img.cart-image {
+  margin-left: 0px;
+  width: 75px;
+  height: auto;
+  border-radius: 10px;
+}
+
+div span.cart-food-title {
+    margin-left: 20px;
+    font-size: 1.2em;
+}
+
+input.quantity-input{
+  height: 34px;
+  width: 50px;
+  border-radius: 5px;
+  border: 1px solid #56CCF2;
+  background-color: #eee;
+  padding: 0;
+  text-align: center;
+  font-size: 1.2em;
+  margin-right: 25px;
+}
+
+div.food-total{
+  text-align: end;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+div strong.food-sum-title{
+  font-weight: bold;
+  font-size: 1.5em;
+  margin-right: 20px;
+}
+
+div span.food-sum-price{
+  font-size: 1.1em;
+}
+
+.purchase-button{
+  display: block;
+  margin: 40px auto 80px auto;
+  font-size: 1.7em;
+}
