--- a/styles/style.css
+++ b/styles/style.css
@@ -462,3 +462,50 @@ section{
     margin: 1.5%;
 
 }
+
+*{
+    margin:0;
+    list-style: none;
+    padding:0;
+}
+
+ul{
+    display:flex;
+}
+ul li{
+    position: relative;
+    display:block;
+    color: #bf0603;
+    font-size:30px;
+    height:60px;
+    width:60px;
+    background: #fff1d0;
+    line-height:60px;
+    border-radius:50%;
+    margin:0 15px;
+    cursor:pointer;
+    transition: .3s;
+}
+ul li:before{
+    position:absolute;
+    content:'';
+    top:0;
+    left:0;
+    /*background:#d35400;*/
+    height: 100%;
+    width:100%;
+    border-radius: 50%;
+    z-index:-1;
+    transform:scale(0.9);
+    transition:.8s;
+}
+ul li:hover:before{
+    filter:blur(3px);
+    transform: scale(2);
+    box-shadow: 0 0 30px #d35400;
+}
+ul li:hover{
+    color: #bf0603;
+    box-shadow: 0 20px 50px #060606;
+    text-shadow: 0 20px 50px #bf0603;
+}
