--- a/styles/style.css
+++ b/styles/style.css
@@ -400,19 +400,14 @@ nav ul li a:hover{
 }
 
 .container {
-    display: flex;
-    display: -webkit-flex; /* Safari */
-    min-height: 80px;
-    flex-direction: row;
     text-align: center;
     justify-content: center;
-    flex-wrap:wrap;
     align-items: flex-end;
     align-content: flex-end;
-    align-items:center;
+    justify-items: center;
     background: #bf0603;
 
-    padding:100px;
+    padding:2.5%;
 }
 *{
     margin:0;
@@ -420,20 +415,23 @@ nav ul li a:hover{
     padding:0;
 }
 
-.dec{
-    display:flex;
+.dec {
+    display: grid;
+    grid-gap: 1%;
+    grid-template-columns: repeat(auto-fit, minmax(3em, 1fr));
+}
+.dec ul{
+  
 }
 .dec li.footeritem{
-    position: relative;
-    display:block;
     color: #bf0603;
     font-size:30px;
-    height:60px;
+    height: 60px;
     width:60px;
     background: #fff1d0;
     line-height:60px;
     border-radius:50%;
-    margin:0 15px;
+    margin: 5%;
     cursor:pointer;
     transition: .3s;
 }
